# Pix2Pix-Zero-LoRA

./: .gitignore  CONTRIBUTING.md  LORA_STYLE_SPECIFICATION.md  README.md  ULTIMATE_PROJECT_SPECIFICATION.md  accuracy.md  anime.txt  app_gradio.py  edit_cli.py  human.txt  pyproject.toml  requirements.txt  setup_windows.ps1  train_lora.py
.github/workflows/: ci.yml
assets/embeddings_sd_1.4/: anime.pt  human.pt
data/cyberpunk/: img13.avif  img6.avif
data/inputs/: city.avif
models/lora/cyberpunk/: README.md  adapter_config.json
models/lora/ghibli/: README.md  adapter_config.json
src/: __init__.py  inversion.py
src/utils/: __init__.py  base_pipeline.py  cross_attention.py  ddim_inv.py  edit_pipeline.py  gradio_utils.py  huggingface_utils.py  scheduler.py
tests/: test_core.py
